--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">ARC</string>
-    <string name="network_error">network connection problems</string>
-    <string name="action_settings">Settings</string>
+    <string name="error_network">Проблемы с подключением к сети</string>
+    <string name="action_settings">Настройки</string>
+    <string name="status_on">Веб-сервер запущен</string>
+    <string name="status_off">Веб-сервер остановлен</string>
+    <string name="audio_settings">Генерация команд</string>
+    <string name="audio_settings_summary">Длительности импульсов указаны в семплах</string>
 </resources>
